pkg/lang/testdata/ub/body-meta/valid/resource-lock.ub
resources: { aws.vpc.this: { @lock: 'x' } }
