pkg/lang/testdata/ub/body-meta/invalid/resource-trigger.ub
resources: { aws.vpc.this: { @trigger: 'always' } }
